// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FzPdfViewer > Snapshots > should match snapshot - advanced toolbar 1`] = `
"<div data-v-3934d69a="" class="flex gap-12 flex-col" style="height: 768px; width: 512px;">
  <div data-v-3934d69a="" class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div data-v-3934d69a="" class="overflow-auto h-full">
      <div data-v-3934d69a="" data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div><!-- Basic toolbar -->
  <!-- Advanced toolbar -->
  <div data-v-3934d69a="" class="flex justify-between items-center">
    <div data-v-3934d69a="" data-testid="fz-tabs" class="view-mode-tabs">
      <div data-v-3934d69a="" data-title="pdf" data-initial-selected="true"></div>
      <div data-v-3934d69a="" data-title="xml" data-initial-selected="false"></div>
    </div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" disabled="" aria-label="Previous page"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button data-v-3934d69a="" aria-label="Next page"></button></div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Zoom out"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button data-v-3934d69a="" aria-label="Zoom in"></button><button data-v-3934d69a="" aria-label="Download"></button><button data-v-3934d69a="" aria-label="Reset zoom"></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - custom dimensions 1`] = `
"<div data-v-3934d69a="" class="flex gap-12 flex-col" style="height: 600px; width: 800px;">
  <div data-v-3934d69a="" class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div data-v-3934d69a="" class="overflow-auto h-full">
      <div data-v-3934d69a="" data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div><!-- Basic toolbar -->
  <div data-v-3934d69a="" class="flex justify-between">
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Zoom out"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button data-v-3934d69a="" aria-label="Zoom in"></button></div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" disabled="" aria-label="Previous page"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button data-v-3934d69a="" aria-label="Next page"></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - default state 1`] = `
"<div data-v-3934d69a="" class="flex gap-12 flex-col" style="height: 768px; width: 512px;">
  <div data-v-3934d69a="" class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div data-v-3934d69a="" class="overflow-auto h-full">
      <div data-v-3934d69a="" data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div><!-- Basic toolbar -->
  <div data-v-3934d69a="" class="flex justify-between">
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Zoom out"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button data-v-3934d69a="" aria-label="Zoom in"></button></div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" disabled="" aria-label="Previous page"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button data-v-3934d69a="" aria-label="Next page"></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - page 3 1`] = `
"<div data-v-3934d69a="" class="flex gap-12 flex-col" style="height: 768px; width: 512px;">
  <div data-v-3934d69a="" class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div data-v-3934d69a="" class="overflow-auto h-full">
      <div data-v-3934d69a="" data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div><!-- Basic toolbar -->
  <div data-v-3934d69a="" class="flex justify-between">
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Zoom out"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button data-v-3934d69a="" aria-label="Zoom in"></button></div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Previous page"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-page">3 / 5</span><button data-v-3934d69a="" aria-label="Next page"></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - scale 150% 1`] = `
"<div data-v-3934d69a="" class="flex gap-12 flex-col" style="height: 768px; width: 512px;">
  <div data-v-3934d69a="" class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div data-v-3934d69a="" class="overflow-auto h-full">
      <div data-v-3934d69a="" data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div><!-- Basic toolbar -->
  <div data-v-3934d69a="" class="flex justify-between">
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Zoom out"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-scale">150 %</span><button data-v-3934d69a="" aria-label="Zoom in"></button></div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" disabled="" aria-label="Previous page"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button data-v-3934d69a="" aria-label="Next page"></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - small size 1`] = `
"<div data-v-3934d69a="" class="flex gap-12 flex-col" style="height: 768px; width: 512px;">
  <div data-v-3934d69a="" class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div data-v-3934d69a="" class="overflow-auto h-full">
      <div data-v-3934d69a="" data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div><!-- Basic toolbar -->
  <div data-v-3934d69a="" class="flex justify-between">
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Zoom out"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-sm" data-testid="pdf-scale">100 %</span><button data-v-3934d69a="" aria-label="Zoom in"></button></div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" disabled="" aria-label="Previous page"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-sm" data-testid="pdf-page">1 / 5</span><button data-v-3934d69a="" aria-label="Next page"></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - toolbar at top 1`] = `
"<div data-v-3934d69a="" class="flex gap-12 flex-col-reverse" style="height: 768px; width: 512px;">
  <div data-v-3934d69a="" class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center">
    <div data-v-3934d69a="" class="overflow-auto h-full">
      <div data-v-3934d69a="" data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div><!-- Basic toolbar -->
  <div data-v-3934d69a="" class="flex justify-between">
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Zoom out"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button data-v-3934d69a="" aria-label="Zoom in"></button></div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" disabled="" aria-label="Previous page"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button data-v-3934d69a="" aria-label="Next page"></button></div>
  </div>
</div>"
`;

exports[`FzPdfViewer > Snapshots > should match snapshot - with custom classes 1`] = `
"<div data-v-3934d69a="" class="flex gap-12 flex-col custom-container" style="height: 768px; width: 512px;">
  <div data-v-3934d69a="" class="bg-grey-100 p-24 flex overflow-hidden h-full w-full rounded justify-center items-center custom-pdf-container">
    <div data-v-3934d69a="" class="overflow-auto h-full">
      <div data-v-3934d69a="" data-testid="vue-pdf" class="shadow-md"></div>
    </div>
  </div><!-- Basic toolbar -->
  <div data-v-3934d69a="" class="flex justify-between">
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" aria-label="Zoom out"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-scale">100 %</span><button data-v-3934d69a="" aria-label="Zoom in"></button></div>
    <div data-v-3934d69a="" class="flex items-center gap-8"><button data-v-3934d69a="" disabled="" aria-label="Previous page"></button><span data-v-3934d69a="" class="text-grey-500 font-medium text-base" data-testid="pdf-page">1 / 5</span><button data-v-3934d69a="" aria-label="Next page"></button></div>
  </div>
</div>"
`;
